Update scene management

--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -35,6 +35,7 @@
     <ClInclude Include="ecs\system.h" />
     <ClInclude Include="src\constants.h" />
     <ClInclude Include="src\menu.h" />
+    <ClInclude Include="src\stage.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core\game.cpp" />
