--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -40,6 +40,7 @@
     <ClInclude Include="src\playerControlled.h" />
     <ClInclude Include="src\splash.h" />
     <ClInclude Include="src\stage.h" />
+    <ClInclude Include="src\stageSelect.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core\game.cpp" />
